# pythonBot

./: .gitignore  Procfile  README.md  alerts.py  cleaner.py  envGLOB.py  env_process.py  file.txt  file_manager.py  keep_alive.py  main.py  mainPythonBot.py  main_backup.py  messages.py  non_program.py  process.py  pyproject.toml  requirements.txt
