[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "pythonbot"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23"
discord = "^1.0"
flask = "^1.1"
gspread = "^3.6"
oauth2client = "^4.1"
[tool.poetry.dev-dependencies]
